--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- credits: https://robinmoisson.github.io/staticrypt/ -->
         <section id="banner">
             <div class="inner">
-                <h1>Sinapsi è l'applicazione che mette in contatto psicologi e medici di base per fornire al paziente una cura completa ed efficiente</h1>
+                <h1>Sinapsi è l’app che unisce medici e psicologi in modo semplice e veloce, per garantire al paziente una cura completa ed efficace</h1>
                 <form class="form-inline" id="staticrypt-form" action="#" method="post">
                     <input id="staticrypt-password"
                            type="password"
@@ -38,18 +38,19 @@
                     <ul class="actions">
                         <li><input type="submit" value="CONFERMA" class="staticrypt-decrypt-button special"/></li>
                     </ul>
+                    <a href="demo.html">DEMO</a>
                 </form>
             </div>
         </section>
 
-    <!-- Footer -->    
+		<!-- Footer -->
         <footer id="footer">
-            <div class="copyright">
-                &copy; <a href="https://www.linkedin.com/in/tbuonocore">TOMMASO BUONOCORE</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/tbuonocore" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
-                <a href="https://github.com/detsutut/psimed" class="icon fa-github"><span class="label">GitHub</span></a>
-                <br> Design: <a href="https://templated.co">Templated</a>. Images: <a href="https://www.pexels.com">Pexels</a>. All rights reserved.
-            </div>
-        </footer>
+				<div class="copyright">
+					&copy; Dott. Andrea Avondo / Dott.ssa Giulia Monardo - Tutti i diritti riservati.
+					<br> Sito realizzato da: <a href="https://www.linkedin.com/in/tbuonocore">TOMMASO BUONOCORE</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/tbuonocore" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
+					<a href="https://github.com/detsutut/psimed" class="icon fa-github"><span class="label">GitHub</span></a>&nbsp;&nbsp;-&nbsp;Design:&nbsp;<a href="https://templated.co">Templated.</a>
+				</div>
+		</footer>
 
     <!-- Scripts -->
         <script src="assets/js/jquery.min.js"></script>
