--- a/info1.html
+++ b/info1.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Contenuto Informativo 1 - Sinapsi</title>
+		<title>Perchè Usare Sinapsi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body>
+	<body style="background-image: url('images/perche-sinapsi-full.jpg');background-size: cover;">
 
 		<!-- Header -->
 			<header id="header">
@@ -20,35 +20,73 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="info1.html">Contenuto Informativo 1</a></li>
-					<li><a href="info2.html">Contenuto Informativo 2</a></li>
+					<li><a href="info1.html">Perchè Usare Sinapsi</a></li>
 				</ul>
 			</nav>
 
 		<!-- Main -->
-			<section id="main">
-				<div class="inner">
-					<div class="image fit">
-						<img src="images/cont-info-1.jpeg" alt="" />
-					</div>
+			<section id="main" style="background-color: rgba(255,255,255,0.3)">
+				<div class="inner" style="background-color: rgba(255,255,255,0.9); padding: 5%;">
 					<header>
-						<h1>Contenuto Informativo 1</h1>
-						<p class="info">Scritto 3 giorni fa da <a href="#contatti">A</a></p>
+						<h1>Perchè Usare Sinapsi</h1>
+						<p class="info">Scritto il 28/06/2020 da <a>Andrea Avondo</a> e <a>Giulia Monardo</a></p>
 					</header>
-					<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel. Nunc ullamcorper ipsum at diam congue luctus. Sed nec sapien blandit, tempor quam non, consectetur turpis. Morbi libero lorem, hendrerit sed metus non, malesuada placerat nulla. Sed nisi turpis, rutrum eget rutrum euismod, consequat ullamcorper eros. Quisque tortor nunc, sodales convallis nisl non, bibendum tincidunt tortor. Etiam pellentesque tincidunt nunc, a dignissim dolor tempus et. Pellentesque in urna ligula. Fusce ligula velit, mollis ac diam non, rutrum fringilla turpis.</p>
-					<p>Aliquam consequat, nulla sed sodales convallis, sem odio porttitor justo, non volutpat augue libero eget neque. Nunc consequat arcu nec tortor venenatis tempus a placerat mauris. Nam ultricies consequat ligula, et placerat arcu ultrices a. Sed placerat ipsum lacus, at imperdiet nisi imperdiet at. Vivamus diam dui, accumsan quis lacinia ac, sollicitudin feugiat metus. Vestibulum a velit ac eros blandit molestie non eget erat. Nunc eget odio erat. Nulla sit amet enim pharetra tortor molestie tempor nec sed turpis. Cras eget odio at erat dictum tincidunt. Sed facilisis convallis mi, eget tempor nunc pellentesque pulvinar. Etiam volutpat luctus tristique.</p>
-					<p>Aliquam erat eros, pretium non facilisis id, mollis a lacus. Nam nunc nisl, consequat at est vel, ornare feugiat tortor. Phasellus tempor ex vel mi blandit convallis. Sed accumsan sapien quis bibendum posuere. Vivamus convallis mattis ipsum. Suspendisse viverra purus non mi cursus, vitae pulvinar dui condimentum. Donec dui lacus, pretium in neque vitae, laoreet tempus nulla. Maecenas ac augue bibendum, consectetur ante eu, vulputate ipsum.</p>
-					<p>Nullam volutpat, sem at hendrerit volutpat, magna orci facilisis purus, et venenatis sapien sapien pretium libero. Duis hendrerit eget metus at molestie. Duis leo lorem, interdum a placerat ut, ullamcorper at eros. Donec convallis auctor cursus. Integer placerat felis mauris, sed cursus diam sodales et. Phasellus mi nibh, scelerisque vulputate viverra ut, dictum vitae mi. In at blandit felis. Aenean id porttitor neque. Nam bibendum a orci non pretium. Pellentesque feugiat erat augue, quis venenatis diam mollis eu.</p>
+					<p>In questo breve articolo vogliamo condividere con te i principali vantaggi che puoi trarre dall’utilizzo di Sinapsi.</p>
+					<p>Dalle ricerche condotte sugli effetti della collaborazione tra MMG e psicologi è stato rilevato che il lavoro in équipe, oltre a produrre importanti benefici per i pazienti e determinare una riduzione dei costi per il SSN, riduce il carico di lavoro del medico di base fino al 48%, aumentandone significativamente il benessere occupazionale.
+						È stato dimostrato come gran parte del tempo del medico di base sia dedicato ad affrontare i problemi emotivi dei propri assistiti, spesso espressi sotto forma di sofferenza somatica o di disagio relazionale.
+						Infatti, fino al 70% dei pazienti che si recano nell’ambulatorio del proprio medico spinti da un particolare disagio fisico, presenta problemi di natura psicosociale connessi alla richiesta di cura. Inoltre, dalla letteratura emerge che il 35% delle persone che ricercano attenzione medica, soddisfa i criteri diagnostici di un disturbo psicopatologico.</p>
+					<p>Avendo poco tempo a disposizione, è comprensibile come spesso risulti arduo per il MMG approfondire il quadro psicologico dei propri assistiti. Per questo motivo, abbiamo pensato di fornirti due tabelle create ad hoc sulla base dei dati derivanti dalla letteratura che ti possano aiutare nel riconoscimento della sofferenza psicologica: nella prima tabella troverai i principali fattori di rischio psicopatologici, mentre nella seconda i principali campanelli d’allarme che i pazienti frequentemente riportano per cui è indicato un approfondimento psicodiagnostico.</p>
+					<p>
+					<div class="row uniform 50%">
+						<div class="6u 12u$(xsmall)">
+							<table>
+								<tr><th>POPOLAZIONE A RISCHIO DI DISTURBO PSICHICO</th></tr>
+								<tr><td>Storia personale o familiare di disturbi psichici</tr></td>
+								<tr><td>Recente lutto o evento psico-sociale traumatico/stressante</tr></td>
+								<tr><td>Patologia cronica (diabete, cardiopatia, asma)</tr></td>
+								<tr><td>Dolore cronico</tr></td>
+								<tr><td>Sintomi somatoformi</tr></td>
+								<tr><td>Eventi cardiovascolari acuti (IMA, stroke)</tr></td>
+								<tr><td>Insonnia cronica</tr></td>
+								<tr><td>Uso/abuso di alcol e/o sostanze</tr></td>
+								<tr><td>Alta frequenza di consultazioni</tr></td>
+							</table>
+						</div>
+						<div class="6u 12u$(xsmall)">
+							<table>
+								<tr><th>INDICATORI DI POSSIBILE DISTURBO PSICHICO IN ATTO</th></tr>
+								<tr><td>Visite frequenti (> 5/anno)</tr></td>
+								<tr><td>Sintomi fisici non giustificati</tr></td>
+								<tr><td>Problemi lavorativi</tr></td>
+								<tr><td>Problemi relazionali</tr></td>
+								<tr><td>Malessere, preoccupazioni, lutti</tr></td>
+								<tr><td>Variazioni di peso</tr></td>
+								<tr><td>Attacchi di panico</tr></td>
+								<tr><td>Disturbi del sonno</tr></td>
+								<tr><td>Faticabilità</tr></td>
+								<tr><td>Disturbi memoria, attenzione, concentrazione</tr></td>
+							</table>
+					</div>
+				</p>
+					<p>
+						Attraverso Sinapsi, puoi alleviare il tuo carico di lavoro portando alla nostra attenzione tutti i pazienti che ritieni necessitino di un percorso psicologico, garantendo ai tuoi assistiti le cure più adeguate nel rispetto della moderna concezione bio-psico-sociale della salute.
+					</p>
+					<p style="font-size:75%;">
+							Bibliografia:<br>
+							- Gatchel, R. J., & Oordt, M. S. (2003). Clinical health psychology and primary care: Practical advice and clinical guidance for successful collaboration. American Psychological Association.<br>
+							- G. Ventriglia et al., (2016). Ansia e depressione in Medicina Generale. Rivista Società Italiana di Medicina Generale, n.4, 33-38.<br>
+							- Pizzini, A., & Benincasa, F. (2011). The role of general practitioners in the management of psychiatric patients. Clinical Management Issues, 5(1), 3-6.<br>
+					</p>
 				</div>
 			</section>
 
 		<!-- Footer -->
 		<footer id="footer">
-			<div class="copyright">
-				&copy; <a href="https://www.linkedin.com/in/tbuonocore">TOMMASO BUONOCORE</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/tbuonocore" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
-				<a href="https://github.com/detsutut/psimed" class="icon fa-github"><span class="label">GitHub</span></a>
-				<br> Design: <a href="https://templated.co">Templated</a>. Images: <a href="https://www.pexels.com">Pexels</a>. All rights reserved.
-			</div>
+				<div class="copyright">
+					&copy; Dott. Andrea Avondo / Dott.ssa Giulia Monardo - Tutti i diritti riservati.
+					<br> Sito realizzato da: <a href="https://www.linkedin.com/in/tbuonocore">TOMMASO BUONOCORE</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/tbuonocore" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
+					<a href="https://github.com/detsutut/psimed" class="icon fa-github"><span class="label">GitHub</span></a>&nbsp;&nbsp;-&nbsp;Design:&nbsp;<a href="https://templated.co">Templated.</a>
+				</div>
 		</footer>
 
 		<!-- Scripts -->
