privacy policy in footer

--- a/demo.html
+++ b/demo.html
@@ -235,7 +235,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="copyright">
-					&copy; Dott. Andrea Avondo / Dott.ssa Giulia Monardo - Tutti i diritti riservati.
+					&copy; Dott. Andrea Avondo / Dott.ssa Giulia Monardo - Tutti i diritti riservati. <a>Privacy Policy</a>
 					<br> Sito realizzato da: <a href="https://www.linkedin.com/in/tbuonocore">TOMMASO BUONOCORE</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/tbuonocore" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
 					<a href="https://github.com/detsutut/psimed" class="icon fa-github"><span class="label">GitHub</span></a>&nbsp;&nbsp;-&nbsp;Design:&nbsp;<a href="https://templated.co">Templated.</a>
 				</div>
