--- a/index.html
+++ b/index.html
@@ -24,6 +24,83 @@
             <a class="logo">Sina<strong>psi</strong></a>
         </header>
 
+		<div id="infModal" class="modal">	
+				<!-- Modal content -->
+				<div class="modal-content">
+					<span class="close">&times;</span>
+					<h2>Privacy Policy</h2>
+					<p>Ai sensi dell’art. 13 del Regolamento Europeo 679/2016 relativo alla protezione dei dati personali, nonché alla libera circolazione di tali dati (il “Regolamento” o “GDPR”), si informa che i Titolari del trattamento dei dati comunicati dall’utente o altrimenti ottenuti per effetto dell’utilizzo del sito web con URL https://detsutut.github.io/sinapsi/ (il “Sito”) sono:
+						<ul>
+							<li>Dott. Andrea Avondo, contattabile all’indirizzo e-mail andrea.avondo01@gmail.com.;</li>
+							<li>Dott.ssa Giulia Monardo, contattabile all’indirizzo e-mail giulia.monardo01@gmail.com (di seguito i “Titolari”).</li>
+						</ul>
+					</p>
+					<h3>1) Tipologie di dati trattati</h3>
+					<h4>Dati di navigazione</h4>
+					<p>
+						I sistemi informatici e le procedure software preposte al funzionamento del Sito acquisiscono, nel corso del loro normale esercizio, alcuni dati personali la cui trasmissione è implicita nell’uso dei protocolli di comunicazione di Internet o è utilizzata per migliorare la qualità del servizio offerto. Si tratta di informazioni che non sono raccolte per essere associate a interessati identificati, ma che per loro stessa natura potrebbero, attraverso elaborazioni ed associazioni, permettere di identificare gli utenti.
+					</p>
+					<p>
+						In questa categoria di dati rientrano gli indirizzi IP o i nomi a dominio dei computer utilizzati dagli utenti che si connettono al Sito, gli indirizzi in notazione URI (Uniform Resource Identifier) delle risorse richieste, l’orario della richiesta, il metodo utilizzato nel sottoporre la richiesta al server, la dimensione del file ottenuto in risposta, il codice numerico indicante lo stato della risposta data dal server (buon fine, errore, ecc.) ed altri parametri relativi al sistema operativo e all’ambiente informatico dell’utente.
+					</p>
+					<p>
+						Questi dati vengono utilizzati al fine di ricavare informazioni statistiche anonime sull’uso del Sito e per controllare il corretto funzionamento dei sistemi informatici. I dati potrebbero essere utilizzati altresì per l’accertamento di responsabilità in caso di ipotetici reati informatici o nel caso in cui si verifichino dei danni in capo ai Titolari o in capo a terzi.
+					</p>
+					<h4>Dati forniti volontariamente dall’utente</h4>
+					<p>
+						Gli utenti non sono tenuti a fornire dati personali per visitare il Sito. Tuttavia, i contatti tra gli utenti e i Titolari, attraverso la compilazione del “Modulo Invio Paziente”, l’invio di e-mail, messaggi o qualsiasi tipo di comunicazione agli indirizzi indicati sul Sito, comportano la conseguente acquisizione di dati personali comuni, quali a titolo esemplificativo nome, cognome, indirizzo e numero di telefono, nonché di eventuali altri dati personali che saranno forniti dall’utente spontaneamente interagendo con i Titolari tramite il Sito.
+					</p>
+					<p>
+						Inoltre, qualora l’utente del Sito dovesse segnalare un paziente il sito potrebbe indirettamente trattare particolari categorie di dati personali, legati allo stato di salute del paziente stesso. Per tale tipologia di dati è necessario che Il medico:
+						<ul>
+								<li>informi adeguatamente il paziente circa le operazioni di trattamento che saranno effettuate dai Titolari;</li>
+								<li>ottenga il consenso del paziente per la comunicazione dei dati personali ai Titolari.</li>
+						</ul>
+					</p>
+					<p>
+							Infine, previo consenso dell’utente potrà lasciare i sui dati personali per ricevere newsletter e così ricevere ulteriori approfondimenti psicologici creati ad hoc e rimanere sempre aggiornato.
+					</p>
+					<h3>2) Finalità e base giuridica del trattamento</h3>
+					<p>
+						I dati personali potranno essere raccolti trattati per le seguenti finalità:
+						<ol type="a" style="list-style-type: lower-latin;">
+							<li>per l’erogazione dei servizi offerti dai Titolari, tra i quali l’inizio di un percorso psicologico;</li>
+							<li>gestire le richieste di informazioni dell’utente;</li>
+							<li>adempiere agli obblighi legali a cui sono soggetti i Titolari;</li>
+							<li>inviare newsletter a mezzo email, per l’invio di aggiornamenti periodici.</li>
+						</ol>
+					</p>
+					<p>
+						In relazione alle finalità di cui ai precedenti punti a), b) c), il conferimento dei dati personali è necessario. L’eventuale rifiuto di fornire i dati potrà determinare l’impossibilità per i Titolari di ottemperare alle richieste, di adempiere agli obblighi di legge.
+						<br>Fornire i dati personali tramite il “Modulo Invio Paziente” non è un obbligo di legge, tuttavia, il conferimento dei dati è necessario per adempiere alle richieste ed è altresì necessario il consenso del paziente. 
+						<br>Il trattamento dei dati personali per le finalità di cui al punto d) richiede il Suo consenso e il conferimento di tali dati è facoltativo e un eventuale rifiuto non avrà alcuna conseguenza.
+					</p>
+					<h3>3) Modalità del trattamento e conservazione dei dati</h3>
+					<p>I dati personali saranno trattati da persone autorizzate al trattamento che agiscono sotto l’autorità dei Titolari, principalmente con sistemi elettronici in conformità ai principi applicabili al trattamento di dati personali ai sensi dell’art. 5 del Regolamento.</p>
+					<h3>4) Periodo di conservazione dei dati</h3>
+					<p>I dati saranno conservati per il periodo necessario ad adempiere agli obblighi di legge.</p>
+					<p>Il periodo di conservazione dei dati dipende dalle finalità per cui vengono trattati e pertanto potrebbe variare. I criteri utilizzati per determinare il periodo di conservazione applicabile sono i seguenti: la conservazione dei dati personali oggetto della presente informativa avverrà per il tempo necessario (i) alla gestione delle richieste dell’utente, (ii) alla gestione di reclami o specifiche richieste dell’utente, (iii) a far valere diritti in sede giudiziaria nonché (iv) per il tempo previsto da norme di legge applicabili.</p>
+					<p>Per la finalità di cui alla lett. d), della presente privacy policy, il tempo di conservazione dei dati personali è pari a 24 mesi dalla raccolta, salvo non ricorra una revoca del consenso – da parte dell’utente – prima della scadenza di tale periodo. Al termine dei 24 mesi, i dati personali saranno automaticamente cancellati ovvero resi anonimi in modo permanente e irreversibile.</p>
+					<h3>5) Comunicazione, diffusione e trasferimento dei dati</h3>
+					<p>I dati non saranno oggetto di diffusione e potranno essere comunicati alle Autorità competenti o ad enti pubblici o privati per l’adempimento di obblighi previsti dalla legge.</p>
+					<p>I dati raccolti potranno essere trattati da fornitori terzi, quali responsabili del trattamento in relazione ai servizi prestati per conto dei Titolari sulla base di appositi accordi contrattuali, eventualmente per occasionali operazioni di manutenzione e per quanto sia necessario per eseguire servizi sotto specifiche richieste.</p>
+					<h3>6) Diritti dell’interessato</h3>
+					<p>
+						L’ utente, in qualità di interessato potrà esercitare, in relazione ai trattamenti dei dati personali – sopra descritti – i diritti seguenti diritti, ai sensi degli artt. da 15 a 22 del GDPR:
+						<ul>
+								<li>Diritto di accesso: per conoscere quali dati siano trattati e tutte le informazioni relative al trattamento.</li>
+								<li>Diritto di rettifica: per poter richiedere la modifica dei dati poiché inesatti o obsoleti.</li>
+								<li>Diritto alla portabilità: per ottenere copia dei dati che vengono trattati, in un formato strutturato, di uso comune e leggibile da un dispositivo automatico, al fine di facilitare un eventuale trasferimento dei dati verso un altro titolare del trattamento, diverso dai Titolari.</li>
+								<li>Diritto di limitazione del trattamento: per poter limitare il trattamento dei propri dati, a condizione che ricorra una delle ipotesi previste dalla disciplina applicabile.</li>
+								<li>Diritto alla cancellazione: richiedere la cancellazione dati.</li>
+								<li>Diritto di opposizione: richiedere la cessazione del trattamento dei dati.</li>
+								<li>Diritto di proporre reclamo all’autorità di controllo: per promuovere eventuali segnalazioni, o reclami al Garante per la protezione dei dati personali.</li>
+						</ul>
+					</p>
+					<p>L’esercizio di tali diritti, può essere realizzato attraverso i mezzi postali, elettronici o gli eventuali e ulteriori strumenti di comunicazione scelti dall’interessato, utilizzando i contatti sopra indicati e allegando alla richiesta i documenti necessari (ad es. una copia del documento d’identità) a identificare il soggetto interessato, legittimato a promuovere la richiesta.</p>
+				</div>
+		</div>
+
     <!-- Login -->
     <!-- credits: https://robinmoisson.github.io/staticrypt/ -->
         <section id="banner">
@@ -46,9 +123,9 @@
 		<!-- Footer -->
         <footer id="footer">
 				<div class="copyright">
-					&copy; Dott. Andrea Avondo / Dott.ssa Giulia Monardo - Tutti i diritti riservati.
+					&copy; Dott. Andrea Avondo / Dott.ssa Giulia Monardo - Tutti i diritti riservati. <a onclick="modal_privacy.style.display = 'block';">Privacy Policy</a>
 					<br> Sito realizzato da: <a href="https://www.linkedin.com/in/tbuonocore">TOMMASO BUONOCORE</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/tbuonocore" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
-					<a href="https://github.com/detsutut/psimed" class="icon fa-github"><span class="label">GitHub</span></a>&nbsp;&nbsp;-&nbsp;Design:&nbsp;<a href="https://templated.co">Templated.</a>
+                    <a href="https://github.com/detsutut/psimed" class="icon fa-github"><span class="label">GitHub</span></a>&nbsp;&nbsp;-&nbsp;Design:&nbsp;<a href="https://templated.co">Templated.</a>
 				</div>
 		</footer>
 
@@ -62,6 +139,15 @@
         <script src="assets/js/crypto-js.js"></script>
         <script src="assets/js/encryptedContent.js"></script>
         <script src="assets/js/decrypto.js"></script>
-        <script src="assets/js/customLogic.js"></script>
+        <script>
+            // **** MODALS **** //
+            var modal_privacy = document.getElementById("infModal");
+            // Get the <span> element that closes the modal
+            var span0 = document.getElementsByClassName("close")[0];
+            // When the user clicks on <span> (x), close the modal
+            span0.onclick = function() {modal_pz.style.display = "none";}
+            // When the user clicks anywhere outside of the modal, close it
+            window.onclick = function(event) {if (event.target == modal_privacy) modal_privacy.style.display = "none";}
+        </script>
 </body>
 </html>
