invio paziente form minor ui fix

--- a/demo.html
+++ b/demo.html
@@ -52,16 +52,16 @@
 						<form onsubmit="showSnackbar(); return false;">
 								<div class="row uniform 50%">
 									<div class="12u$">
-										<label for="medIdText">Medico curante:</label>
+										<label for="medIdText">Medico curante</label>
 										<input type="text" name="medIdText" id="medIdText" value="" placeholder="es. Dott Mario Rossi" />
 									</div>
 									<div class="6u 12u$(xsmall)">
-										<label for="pazName" style="color: rgb(255,255,255,0.0);"> .</label>
-										<input type="text" name="pazName" id="pazName" value="" placeholder="Nome" />
+										<label for="pazName"> Nome</label>
+										<input type="text" name="pazName" id="pazName" value="" placeholder="Nome Paziente" />
 									</div>
 									<div class="6u 12u$(xsmall)">
-										<label for="pazSurname">Paziente:</label>
-										<input type="text" name="pazSurname" id="pazSurname" value="" placeholder="Cognome" />
+										<label for="pazSurname">Cognome</label>
+										<input type="text" name="pazSurname" id="pazSurname" value="" placeholder="Cognome Paziente" />
 									</div>
 									<div class="12u$">
 										<input type="email" name="pazEmail" id="pazEmail" value="" placeholder="Indirizzo Email" />
